--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">FlightApp</string>
+    <string name="app_name">深航商旅</string>
     <string name="mingxi"><u>明细</u></string>
 </resources>
